clean up notebooks

--- a/code/notebook/SDF2D.ipynb
+++ b/code/notebook/SDF2D.ipynb
@@ -101,7 +101,7 @@
     "imshow(color.astype(np.float32), cmap='gray')\n",
     "grid()\n",
     "fName = \"sdf2d\"\n",
-    "tikzplotlib.save(\"../../paper/DAFx20_Templates_LaTeX/img/\"+fName+\".png\", float_format='.4f')\n",
+    "# tikzplotlib.save(\"../../paper/DAFx20_Templates_LaTeX/img/\"+fName+\".png\", float_format='.4f')\n",
     "plt.show()"
    ]
   },
@@ -311,7 +311,7 @@
     "trace(ax,array([[[-1.3,-4.5]]]), res=res)\n",
     "fName = 'sphereTracingViz'\n",
     "# tikzplotlib.save(\"../../paper/DAFx20_Templates_LaTeX/img/\"+fName+\".tex\", float_format='.4f')\n",
-    "plt.savefig(\"../../paper/DAFx20_Templates_LaTeX/img/\"+fName+\".png\")\n",
+    "# plt.savefig(\"../../paper/DAFx20_Templates_LaTeX/img/\"+fName+\".png\")\n",
     "plt.show()\n"
    ]
   },
@@ -352,8 +352,6 @@
     "d = rect(p)\n",
     "color = render(d)\n",
     "imshow(color.astype(np.float32), cmap='gray')\n",
-    "# grid()\n",
-    "# axis('off')\n",
     "\n",
     "plt.tick_params(\n",
     "    axis='both',          # changes apply to the x-axis\n",
@@ -366,7 +364,7 @@
     "    right=False)\n",
     "\n",
     "fName = \"sdf2dbox\"\n",
-    "plt.savefig(\"../../paper/DAFx20_Templates_LaTeX/img/\"+fName+\".png\",dpi=300)\n",
+    "# plt.savefig(\"../../paper/DAFx20_Templates_LaTeX/img/\"+fName+\".png\",dpi=300)\n",
     "plt.show()"
    ]
   },
