--- a/paper/DAFx20_Templates_LaTeX/RaymarchReverb2.bib
+++ b/paper/DAFx20_Templates_LaTeX/RaymarchReverb2.bib
@@ -337,3 +337,12 @@ note = {available at https://github.com/Flafla2/Generic-Raymarch-Unity, accessed
 	pages = {35--50},
 }
 
+@misc { Aspoeck,
+   author = {Aspöck, Lukas AND Brinkmann, Fabian AND Ackermann, David AND Weinzierl, Stefan AND Vorländer, Michael},
+   title = {GRAS - Ground Truth for Room Acoustical Simulation},
+   year = {2018},
+   doi = {10.14279/depositonce-6726},
+   url = {http://dx.doi.org/10.14279/depositonce-6726},
+   keywords = {Room acoustic simulation, virtual acoustic},
+   abstract = {The Ground truth for Room Acoustical Simulation (GRAS) database contains eleven acoustical scenes that are intended for the evaluation of room acoustical simulation software. This comprises simple scenes that isolate certain acoustic phenomena, as well as complex environments of different shape and size. Each scene consists of (a) a scene description giving the room geometry, and the positions of the acoustic sources and receivers, (b) the corresponding source and receiver characteristics, (c) the description of the acoustic materials by means of absorption and scattering coefficients, and (d) the measured single channel and binaural impulse responses.}
+}
