--- a/code/notebook/SDF2D.ipynb
+++ b/code/notebook/SDF2D.ipynb
@@ -291,12 +291,10 @@
     "xx, yy = np.meshgrid(x, y,)\n",
     "p = np.array([xx,yy]).T\n",
     "d = myMap(p)#minimum(ground(p),wall(p))+3\n",
-    "# d = circle(p)\n",
+    "\n",
     "color = render(d)\n",
     "imshow(color.astype(np.float32), cmap='gray', origin='lower',interpolation='quadric')\n",
-    "# grid()\n",
-    "# xlabel('x coordinate')\n",
-    "# ylabel('y coordinate')\n",
+    "\n",
     "fName = \"sdf2d\"\n",
     "# tikzplotlib.save(\"../../paper/DAFx20_Templates_LaTeX/img/\"+fName+\".tex\", float_format='.4f')\n",
     "\n",
@@ -313,6 +311,13 @@
     "# tikzplotlib.save(\"../../paper/DAFx20_Templates_LaTeX/img/\"+fName+\".tex\", float_format='.4f')\n",
     "# plt.savefig(\"../../paper/DAFx20_Templates_LaTeX/img/\"+fName+\".png\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Visualization of Rounding"
    ]
   },
   {
@@ -367,13 +372,6 @@
     "# plt.savefig(\"../../paper/DAFx20_Templates_LaTeX/img/\"+fName+\".png\",dpi=300)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -392,7 +390,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
